tests/fixtures/invalid/max_set_none.py
# Cannot call max() with Set[int], None
x = max({1, 2, 3}, None)
